--- a/proyecto1/src/app/static/footer/footer.component.html
+++ b/proyecto1/src/app/static/footer/footer.component.html
@@ -4,13 +4,11 @@
     </div>
 </footer>
  -->
- <!-- ============================================================== -->
-            <!-- footer -->
-            <!-- ============================================================== -->
-            <footer class="footer" style="text-align: center;">
-                © 2022 derechos reservados pmm.guananga@yavirac.edu.ec
-            </footer>
-            <!-- ============================================================== -->
-            <!-- End footer -->
-
-
+<!-- ============================================================== -->
+<!-- footer -->
+<!-- ============================================================== -->
+<footer class="footer" style="text-align: center;">
+    © 2022 Derechos Reservados Por Pamela Guananga
+</footer>
+<!-- ============================================================== -->
+<!-- End footer -->
