--- a/proyecto1/src/app/pages/dashboard/dashboard.component.html
+++ b/proyecto1/src/app/pages/dashboard/dashboard.component.html
@@ -1,1 +1,38 @@
-<h1> Bienvenidos Este es mi Dashboard Pamela Guananga</h1>
+<div class="row row-cols-1 row-cols-md-2 g-4">
+    <div class="col">
+      <div class="card">
+        <img src="./assets/images/gallery/camisa1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Camiseta del Ecuador 2022</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="./assets/images/gallery/camisa2.jpg" class="card-img-top" alt="..." >
+        <div class="card-body">
+          <h5 class="card-title">Camiseta Liga de Quito</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="./assets/images/gallery/calentador1.jpeg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Calentadores deportivos</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card">
+        <img src="./assets/images/gallery/chompa1.jpeg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Chompas deportivas</h5>
+          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+        </div>
+      </div>
+    </div>
+  </div>
