--- a/proyecto1/src/app/static/header/header.component.html
+++ b/proyecto1/src/app/static/header/header.component.html
@@ -11,16 +11,16 @@
                 <!-- Logo icon --><b>
                     <!--You can put here icon as well // <i class="wi wi-sunset"></i> //-->
                     <!-- Dark Logo icon -->
-                    <img src="./assets/images/logo-icon.png" alt="homepage" class="dark-logo" />
+                    <img src="./assets/images/logo.jpg" alt="homepage" class="dark-logo" style="width:40px;"     />
                     <!-- Light Logo icon -->
-                    <img src="./assets/images/logo-light-icon.png" alt="homepage" class="light-logo" />
+            
                 </b>
                 <!--End Logo icon -->
                 <!-- Logo text --><span>
                     <!-- dark Logo text -->
-                    <img src="./assets/images/logo-text.png" alt="homepage" class="dark-logo" />
+                 
                     <!-- Light Logo text -->
-                    <img src="./assets/images/logo-light-text.png" class="light-logo" alt="homepage" />
+                    
                 </span>
             </a>
         </div>
@@ -313,7 +313,7 @@
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false"> <i class="flag-icon flag-icon-es"></i></a>
+                        aria-haspopup="true" aria-expanded="false"> <i class="flag-icon flag-icon-ec"></i></a>
                     <div class="dropdown-menu dropdown-menu-right animated bounceInDown">
                         <a class="dropdown-item" href="#"><i class="flag-icon flag-icon-ar"></i> Argentina</a>
                         <a class="dropdown-item" href="#"><i class="flag-icon flag-icon-co"></i> Colombia</a>
@@ -326,13 +326,13 @@
                 <!-- ============================================================== -->
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle waves-effect waves-dark" href="" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false"><img src="./assets/images/users/p1.jpg" alt="user"
+                        aria-haspopup="true" aria-expanded="false"><img src="./assets/images/logo.jpg"  alt="user"
                             class="profile-pic" /></a>
                     <div class="dropdown-menu dropdown-menu-right animated fadeIn">
                         <ul class="dropdown-user">
                             <li>
                                 <div class="dw-user-box">
-                                    <div class="u-img"><img src="./assets/images/users/p1.jpg" alt="user"></div>
+                                    <div class="u-img"><img src="./assets/images/logo.jpg"  alt="user"></div>
                                     <div class="u-text">
                                         <h4>Pamela Guananga</h4>
                                         <p class="text-muted">pmm.guananga@yavirac.edu.ec</p><a href="pages-profile.html"
